--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,13 +1,12 @@
 .top {
   position: relative;
-  height: 40%;
   margin: auto;
 }
 
 .image {
   width: 100%; /* 親要素に合わせる */
-  height: auto; /* 高さは自動調整 */
-  max-width: 500px; /* 最大幅を500pxに制限 */
+  height: 250px; /* 高さは自動調整 */
+  max-width: 1000px;
   border-radius: 80px; /* 角を丸くする */
   border: 15px solid #fff;
   margin: auto;
@@ -17,7 +16,7 @@
   position: absolute;
   font-size: 100px;
   color: #fff;
-  top: 20%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
