--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -1,7 +1,8 @@
 .form {
   background-color: #fff;
-  margin: 30px 50px;
+  margin: 80px auto;
   padding: 30px 80px;
   border: 2px solid #f79fcb;
   border-radius: 30px;
+  max-width: 1000px;
 }
